<resources>
    <string name="app_name">Court Counter</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="three_pointer_text">+3 POINTS</string>
    <string name="two_pointer_text">+2 POINTS</string>
    <string name="free_throw_text">FREE THROW</string>
    <string name="reset_text">RESET</string>
    <string name="display_score">%i</string>
</resources>
