<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/parentPaddingBottom"
    android:paddingLeft="@dimen/parentPaddingLeft"
    android:paddingRight="@dimen/parentPaddingRight"
    android:paddingTop="@dimen/parentPaddingTop"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/innerMarginRight"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:text="@string/team_a"
                style="@style/TeamLabelStyle"/>

            <TextView
                android:id="@+id/scoreA"
                 style="@style/ScoreTextStyle"/>

            <Button
                android:id="@+id/team_a_3"
                style="@style/ButtonStyle"
                android:onClick="updatePoints"
                android:text="@string/three_pointer_text" />

            <Button
                android:id="@+id/team_a_2"
                style="@style/ButtonStyle"
                android:onClick="updatePoints"
                android:text="@string/two_pointer_text" />

            <Button
                android:id="@+id/team_a_1"
                style="@style/ButtonStyle"
                android:onClick="updatePoints"
                android:text="@string/free_throw_text" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/innerMarginRight"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:text="@string/team_b"
                style="@style/TeamLabelStyle" />

            <TextView
                android:id="@+id/scoreB"
                style="@style/ScoreTextStyle"/>

            <Button
                android:id="@+id/team_b_3"
                android:onClick="updatePoints"
                style="@style/ButtonStyle"
                android:text="@string/three_pointer_text" />

            <Button
                android:id="@+id/team_b_2"
                style="@style/ButtonStyle"
                android:onClick="updatePoints"
                android:text="@string/two_pointer_text" />

            <Button
                android:id="@+id/team_b_1"
                style="@style/ButtonStyle"
                android:onClick="updatePoints"
                android:text="@string/free_throw_text" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="reset"
        android:text="@string/reset_text" />
</RelativeLayout>
